--- a/src/Components/Home/Navbar/Navbar.css
+++ b/src/Components/Home/Navbar/Navbar.css
@@ -19,12 +19,12 @@ a {
     padding-left: 10rem;
 }
 
-.n-right>a>span,
-.n-right>button {
+.n-link,
+.n-right button {
     margin-left: 3rem;
 }
 
-.n-right>button:nth-of-type(1) {
+.n-right button:nth-of-type(1) {
     padding: 0.7rem 1.5rem;
     background: white;
     border: 0.5px solid gray;
@@ -32,7 +32,7 @@ a {
     margin-right: 10rem;
 }
 
-.n-right>button:nth-of-type(1):hover {
+.n-right button:nth-of-type(1):hover {
     cursor: pointer;
     background: rgb(221, 250, 255);
     transition: 0.8s;
