--- a/src/Components/Register/Register.css
+++ b/src/Components/Register/Register.css
@@ -1,10 +1,18 @@
  .register {
      height: 100vh;
-     background-color: black transparent;
-     backdrop-filter: blur(4px) saturate(150%);
+     gap: 2rem;
      display: flex;
+     flex-direction: column;
      align-items: center;
      justify-content: center;
+     font-size: 3rem;
+     color: rgb(0, 72, 136);
+     position: absolute;
+     width: 100%;
+ }
+
+ .register>span>span {
+     color: yellowgreen;
  }
 
  .r-container {
@@ -18,11 +26,20 @@
      box-shadow: 0px 1px 10px gray;
      gap: 2rem;
      border-radius: 15px;
-     opacity: 90%;
+     opacity: 95%;
+ }
+
+ img {
+     height: 100vh;
+     width: 100%;
+     filter: blur(1px);
+     /* filter: blur(4px); */
+     /* z-index: 0; */
  }
 
  .r-container>span {
      font-size: 2rem;
+     color: white;
  }
 
  form {
@@ -30,6 +47,7 @@
  }
 
  form input {
+     z-index: 1;
      margin: 1rem;
      padding: 1rem;
      width: 60%;
