--- a/src/Components/Register/Register.css
+++ b/src/Components/Register/Register.css
@@ -26,15 +26,15 @@
      box-shadow: 0px 1px 10px gray;
      gap: 2rem;
      border-radius: 15px;
-     opacity: 95%;
+     opacity: 80%;
+     z-index: 1;
  }
 
  img {
      height: 100vh;
      width: 100%;
-     filter: blur(1px);
-     /* filter: blur(4px); */
-     /* z-index: 0; */
+     filter: blur(4px);
+     z-index: 0;
  }
 
  .r-container>span {
@@ -47,6 +47,7 @@
  }
 
  form input {
+     font-weight: bold;
      z-index: 1;
      margin: 1rem;
      padding: 1rem;
